// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/Title should renders correctly with descriptionFont 1`] = `
<View
  style={
    Object {
      "marginBottom": 12,
      "marginTop": 18,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#444B5A",
          "fontFamily": "Inter-Medium",
          "fontSize": 24,
          "lineHeight": 30,
        },
        Array [
          Object {
            "paddingTop": 12,
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "#000",
          },
        ],
      ]
    }
  >
    description text two
  </Text>
</View>
`;

exports[`@npm/mobydick-core/Title should renders correctly with titleFont 1`] = `
<View
  style={
    Object {
      "marginBottom": 12,
      "marginTop": 18,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#444B5A",
          "fontFamily": "Inter-Medium",
          "fontSize": 24,
          "lineHeight": 30,
        },
        Array [
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "#000",
          },
        ],
      ]
    }
  >
    title two
  </Text>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#5E6678",
          "fontFamily": "Inter-Regular",
          "fontSize": 21,
          "lineHeight": 27,
        },
        Array [
          Object {
            "paddingTop": 12,
            "textAlign": "center",
          },
          Object {
            "flex": 1,
          },
        ],
      ]
    }
  >
    descriptionText
  </Text>
</View>
`;

exports[`@npm/mobydick-core/Title should renders correctly without descriptionFont 1`] = `
<View
  style={
    Object {
      "marginBottom": 12,
      "marginTop": 18,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#20242D",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 27,
          "lineHeight": 33,
        },
        Array [
          Object {
            "textAlign": "center",
          },
          Object {
            "flex": 1,
          },
        ],
      ]
    }
  >
    title
  </Text>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#5E6678",
          "fontFamily": "Inter-Regular",
          "fontSize": 21,
          "lineHeight": 27,
        },
        Array [
          Object {
            "paddingTop": 12,
            "textAlign": "center",
          },
          Object {
            "flex": 1,
          },
        ],
      ]
    }
  >
    descriptionText
  </Text>
</View>
`;

exports[`@npm/mobydick-core/Title should renders correctly without titleFont 1`] = `
<View
  style={
    Object {
      "marginBottom": 12,
      "marginTop": 18,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#20242D",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 27,
          "lineHeight": 33,
        },
        Array [
          Object {
            "textAlign": "center",
          },
          Object {
            "flex": 1,
          },
        ],
      ]
    }
  >
    title
  </Text>
</View>
`;
